fixed content section1 alignment

--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ body {
 
 #aboutUs {
   margin-top: 100px;
-  margin-left: 400px;
+  margin-left: 700px;
 }
 
 .generalText {
